# zebra-h2b-audit-v2

./: .gitignore  CLAUDE.md  HTB-attribute-mapping-zebra-provided.xlsx  README.md  SETUP_COMPLETE.md  UMAP_MIGRATION_REPORT.md  UMAP_MIGRATION_SUMMARY.md  bts.jsonc  package.json  test-db-import.ts
.beads/: deletions.jsonl  issues.jsonl
.next/: trace  trace-build
.serena/: project.yml
.vercel/: project.json
agent_docs/: infrastructure.md  tool-protocol.md
context7-archive/: 20251204_zebra-h2b-audit-v2_sheetjs_cell-addresses-column-letters-row-numbers.md  20251204_zebra-h2b-audit-v2_sheetjs_reading-parsing-excel-files-basic-usage.md  20251204_zebra-h2b-audit-v2_sheetjs_workbook-worksheet-data-structure.md  20251209_zebra-h2b-audit-v2_radix-ui-primitives_popover-component-api.md  (+4 more)
visualization-pipeline/: .gitignore  00_discover_database.py  01_extract_embeddings.py  02_reduce_with_umap.py  03_update_database.py  04_export_tsv.py  05_export_by_type.py  EXECUTION_REPORT.md  HANDOFF.md  IMPLEMENTATION_REPORT.md  PIPELINE_SUMMARY.md  README.md  check_db_final.py  pyproject.toml  run_pipeline.py  verify_db.py  verify_setup.py
visualization-pipeline/data/: metadata.csv  umap_2d.npy  umap_2d_with_metadata.csv  umap_3d.npy  umap_3d_with_metadata.csv
visualization-pipeline/tsv_export/: README.md  metadata.tsv  vectors_2d.tsv  vectors_3d.tsv
visualization-pipeline/tsv_export/attribute_labels/: README.md  metadata.tsv  vectors_2d.tsv  vectors_3d.tsv
visualization-pipeline/tsv_export/descriptions/: README.md  metadata.tsv  vectors_2d.tsv  vectors_3d.tsv
(+138 files in other folders)
